--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,9 +12,15 @@ android {
         versionName "1.0.0"
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "THE_MOVIE_DB_API_KEY", TheMovieDBAPIKey
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "THE_MOVIE_DB_API_KEY", TheMovieDBAPIKey
         }
     }
 }
@@ -22,7 +28,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    //compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    //compile 'com.android.support:appcompat-v7:23.+'
+    //compile 'com.android.support:support-v4:23.1.1'
 }
