Added movies fragment layout and integrated with TMDB api and loaded images.

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx1024m
+TheMovieDBAPIKey="cd64ecd61b6345ed0cbded5e61d1a1ee"
