Completed Stage-1 of Movies app.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,19 @@
-***REMOVED***
+# Project-wide Gradle settings.
 
-***REMOVED***
-***REMOVED***
-***REMOVED***
+# IDE (e.g. Android Studio) users:
+# Gradle settings configured through the IDE *will override*
+# any settings specified in this file.
 
-***REMOVED***
-***REMOVED***
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
 
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Default value: -Xmx10248m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-TheMovieDBAPIKey="cd64ecd61b6345ed0cbded5e61d1a1ee"
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx1024m
