--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,21 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:23.1.1'
+
+    //Retrofit from square
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+
+    //okhttp
+    compile 'com.squareup.okhttp3:okhttp:3.1.2'
+
+    //convertor-gson
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+
+    //Stetho for debugging
+    compile 'com.facebook.stetho:stetho:1.3.0'
+
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.0'
+
+    //ButterKnife for view injection
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
