--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+
     <application
         android:name=".MoviesApplication"
         android:allowBackup="true"
@@ -33,16 +37,29 @@
             android:authorities="com.exinnos.popularmovies"
             android:enabled="true"
             android:exported="false"
-            android:syncable="true"/>
+            android:syncable="true" />
 
 
         <!-- Service for Authenticator to bound with Sync Adapter framework -->
         <service android:name=".sync.MoviesAuthenticatorService">
             <intent-filter>
-                <action android:name="android.accounts.AccountAuthenticator"/>
+                <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
-            <meta-data android:name="android.accounts.AccountAuthenticator"
-                android:resource="@xml/movies_authenticator"/>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/movies_authenticator" />
+        </service>
+
+        <!-- Service for SyncAdapter to bound with Sync Adapter framework -->
+        <service android:name=".sync.MoviesSyncService"
+            android:exported="true"
+            android:process=":sync">
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/movies_sync_adapter" />
         </service>
 
     </application>
