--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,24 +29,27 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    //Retrofit from square
-
-    //okhttp
-
-    //convertor-gson
-
-    //Stetho for debugging
-
     //ButterKnife for view injection
     compile 'com.android.support:design:23.1.1'
+
+    //Retrofit from square
     compile 'com.squareup.picasso:picasso:2.5.2'
+
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
+
+    //okhttp
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
+
+    //convertor-gson
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+
+    //Stetho for debugging
     compile 'com.facebook.stetho:stetho:1.3.0'
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.0'
+
+    // Butternknife
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:support-v4:23.1.1'
 }
